<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/colorBackgroundLight"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textWelcome"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginStart="95dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="96dp"
        android:fontFamily="@font/roboto_light_italic"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="?attr/colorBackgroundDark"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/textLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textLogin"
        android:layout_width="220dp"
        android:layout_height="55dp"
        android:layout_marginStart="95dp"
        android:layout_marginEnd="96dp"
        android:fontFamily="@font/roboto"
        android:labelFor="@id/editTextTextEmailAddress"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="?attr/colorMedium"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textWelcome" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="255dp"
        android:layout_height="65dp"
        android:layout_marginStart="78dp"
        android:layout_marginEnd="78dp"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="?attr/colorMedium"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLogin"
        tools:ignore="Autofill,ExtraText" />

    <TextView
        android:id="@+id/textPassword"
        android:layout_width="220dp"
        android:layout_height="55dp"
        android:layout_marginStart="95dp"
        android:layout_marginEnd="96dp"
        android:fontFamily="@font/roboto"
        android:labelFor="@id/editTextNumberPassword"
        android:text="@string/password"
        android:textAlignment="center"
        android:textColor="?attr/colorMedium"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumberPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <EditText
        android:id="@+id/editTextNumberPassword"
        android:layout_width="255dp"
        android:layout_height="65dp"
        android:layout_marginStart="78dp"
        android:layout_marginEnd="78dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:inputType="numberPassword"
        android:textAlignment="center"
        android:textColor="?attr/colorMedium"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPassword"
        tools:ignore="Autofill,ExtraText" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:layout_marginStart="118dp"
        android:layout_marginEnd="118dp"
        android:backgroundTint="?attr/colorBackgroundDark"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/enter"
        android:textAlignment="center"
        android:textColor="?attr/colorTextLight"
        app:layout_constraintBottom_toTopOf="@+id/buttonPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberPassword" />

    <Button
        android:id="@+id/buttonPassword"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:layout_marginStart="118dp"
        android:layout_marginEnd="118dp"
        android:layout_marginBottom="8dp"
        android:background="?attr/colorTextLight"
        android:backgroundTint="?attr/colorBackgroundLight"
        android:fontFamily="@font/roboto_light_italic"
        android:text="@string/forgot"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="?attr/colorBackgroundDark"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="409dp"
        android:layout_height="wrap_content"

        android:layout_marginBottom="8dp"
        android:background="?attr/colorBackgroundDark"
        android:minHeight="5dp"
        app:layout_constraintBottom_toTopOf="@+id/textChangeTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonPassword" />

    <TextView
        android:id="@+id/textChangeTheme"
        android:layout_width="375dp"
        android:layout_height="48dp"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="18dp"
        android:fontFamily="@font/roboto"
        android:labelFor="@id/editTextTextEmailAddress"
        android:text="@string/change_theme"
        android:textAlignment="center"
        android:textColor="?attr/colorMedium"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonMono"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <Button
        android:id="@+id/buttonMono"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:background="?attr/colorBackgroundDark"
        android:backgroundTint="?attr/colorBackgroundDark"
        android:fontFamily="@font/roboto_light_italic"
        android:text="@string/mono"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="?attr/colorTextLight"
        app:layout_constraintEnd_toStartOf="@+id/buttonTri"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textChangeTheme" />

    <Button
        android:id="@+id/buttonTri"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="?attr/colorTextLight"
        android:backgroundTint="?attr/colorTextLight"
        android:fontFamily="@font/roboto_light_italic"
        android:text="@string/tri"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="?attr/colorMediumDark"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/buttonQuad"
        app:layout_constraintStart_toEndOf="@+id/buttonMono"
        app:layout_constraintTop_toBottomOf="@+id/textChangeTheme" />

    <Button
        android:id="@+id/buttonQuad"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:background="?attr/colorMedium"
        android:backgroundTint="?attr/colorMedium"
        android:fontFamily="@font/roboto_light_italic"
        android:text="@string/quad"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="?attr/colorBackgroundLight"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonTri"
        app:layout_constraintTop_toBottomOf="@+id/textChangeTheme" />

</androidx.constraintlayout.widget.ConstraintLayout>